force-app/main/default/objects/FieloEE__Banner__c/FieloEE__Banner__c.object-meta.xml
<CustomObject>
    <description>Image files that are shown by using a “Banner” component in the members’ portal.</description>
    <label>Banner</label>
    <nameField>
        <label>Banner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banner</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>