force-app/main/default/objects/FieloEE__Banner__c/fields/FieloEE__AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__AttachmentId__c</fullName>
    <description>The ID of the attached image.</description>
    <inlineHelpText>Enter the ID of the image.</inlineHelpText>
    <label>Attachment Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>