force-app/main/default/objects/FieloEE__Banner__c/fields/FieloEE__Category__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>FieloEE__Category__c</referenceTo>
    <relationshipLabel>Banners</relationshipLabel>
    <relationshipName>Banners</relationshipName>
    <type>Lookup</type>
</CustomField>