force-app/main/default/objects/FieloEE__Banner__c/fields/FieloEE__Component__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The name of the component that shows the banner.</description>
    <inlineHelpText>Choose a name for this component.</inlineHelpText>
    <label>Component</label>
    <referenceTo>FieloEE__Component__c</referenceTo>
    <relationshipLabel>Banners</relationshipLabel>
    <relationshipName>Banners</relationshipName>
    <type>Lookup</type>
</CustomField>