force-app/main/default/objects/FieloEE__Banner__c/fields/FieloEE__Description__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Description__c</fullName>
    <description>A description of the banner, for your use only.</description>
    <inlineHelpText>Enter a description for this banner.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>