force-app/main/default/objects/FieloEE__Banner__c/fields/FieloEE__isActive__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only banners marked as active will show in the members&#39; portal. You can only mark a banner as active after you have uploaded an image file.</description>
    <inlineHelpText>Check the box in order to activate the banner. You can only activate a banner if it has a related image.</inlineHelpText>
    <label>is Active</label>
    <type>Checkbox</type>
</CustomField>