force-app/main/default/objects/FieloEE__Banner__c/fields/FieloEE__Link__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Link__c</fullName>
    <description>External or internal link to which the banner will redirect.</description>
    <inlineHelpText>Enter the URL you want this image to redirect to. The link must be of the form "http://www.domain.com".</inlineHelpText>
    <label>Link</label>
    <type>Url</type>
</CustomField>