force-app/main/default/objects/FieloEE__Banner__c/fields/FieloEE__Order__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Order__c</fullName>
    <description>The order of the banners in the Slider type.</description>
    <inlineHelpText>Establish the order of the images in the slider banner.</inlineHelpText>
    <label>Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>