force-app/main/default/objects/FieloEE__Banner__c/fields/FieloEE__OverlayHtml__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__OverlayHtml__c</fullName>
    <description>An HTML code to be rendered over the banner.</description>
    <inlineHelpText>Enter an HTML code that will be rendered over the image.</inlineHelpText>
    <label>Overlay HTML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>