force-app/main/default/objects/FieloEE__Banner__c/fields/FieloEE__OverlayText__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__OverlayText__c</fullName>
    <description>A text to be shown over the banner.</description>
    <inlineHelpText>Enter a text to be shown over the image.</inlineHelpText>
    <label>Overlay Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>