force-app/main/default/objects/FieloEE__Banner__c/fields/FieloEE__Placement__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Placement__c</fullName>
    <description>Where will the banner be shown. You can select the banner to be shown among your different Fielo programs or in a mobile device.</description>
    <inlineHelpText>Use this picklist to show the banner in custom pages.</inlineHelpText>
    <label>Placement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home Top</fullName>
            </value>
            <value>
                <fullName>Home Side</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>