force-app/main/default/objects/FieloEE__Banner__c/recordTypes/FieloEE__Component.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Component</fullName>
    <active>true</active>
    <label>Default</label>
</RecordType>