force-app/main/default/objects/FieloEE__Banner__c/recordTypes/FieloEE__Free.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Free</fullName>
    <active>false</active>
    <label>Free</label>
</RecordType>