force-app/main/default/objects/FieloEE__Banner__c/validationRules/FieloEE__ActiveBanner.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__ActiveBanner</fullName>
    <active>true</active>
    <errorConditionFormula>( ISNULL( FieloEE__AttachmentId__c ) || ISBLANK( FieloEE__AttachmentId__c ) ) &amp;&amp; (FieloEE__isActive__c == true)</errorConditionFormula>
    <errorMessage>You must load an image to active a banner</errorMessage>
</ValidationRule>