force-app/main/default/objects/FieloEE__Banner__c/validationRules/FieloEE__EndDategreaterthanStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__EndDategreaterthanStartDate</fullName>
    <active>true</active>
    <errorConditionFormula>FieloEE__From__c &gt; FieloEE__To__c</errorConditionFormula>
    <errorDisplayField>FieloEE__From__c</errorDisplayField>
    <errorMessage>To Date must be greater than From Date</errorMessage>
</ValidationRule>