force-app/main/default/objects/FieloEE__Banner__c/validationRules/FieloEE__Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Name_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISNULL(Name) ,  ISBLANK(Name) )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Name Required</errorMessage>
</ValidationRule>