force-app/main/default/objects/FieloEE__Banner__c/validationRules/FieloEE__Order_can_not_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Order_can_not_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>FieloEE__Order__c &lt; 0</errorConditionFormula>
    <errorDisplayField>FieloEE__Order__c</errorDisplayField>
    <errorMessage>The order can not be negative</errorMessage>
</ValidationRule>