force-app/main/default/objects/FieloEE__Banner__c/listViews/FieloEE__All_Banners.listView-meta.xml
<ListView>
    <fullName>FieloEE__All_Banners</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Banners</label>
    <language>en_US</language>
</ListView>